# miso-maze

./: .gitignore  Makefile  README.md  app.cabal  cabal.project  default.nix  docker.nix  flake.nix  nixpkgs.nix
.github/workflows/: main.yml
src/: client.hs  server.hs  spec.hs
src/App/: Component.hs  Model.hs
src/Game/: Common.hs  CommonSpec.hs  Game.hs  GameSpec.hs
src/Network/: Api.hs  Protocol.hs
src/Server/: ServerApp.hs  WsApp.hs  WsModel.hs
static/: index.html  index.js
static/mazes/: maze1.txt  maze2.txt  maze3.txt
