cabal-version:      3.0
name:               miso-maze
version:            0.1.0.0
build-type:         Simple

data-files:
  mazes/*.txt

data-dir:
  static

executable app

  hs-source-dirs:
    src
  default-language:
    GHC2021
  default-extensions:
    CPP TemplateHaskell

  if arch(wasm32)
    main-is:
      client.hs
    other-modules:
      App.Component
      App.Model
      Game.Common
      Network.Protocol
    build-depends: 
      aeson,
      base,
      bytestring,
      containers,
      jsaddle,
      miso,
      random,
      text,
      vector
    ghc-options:
      -Wall -O2 -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start" -ddump-splices
    cpp-options:
      -DWASM

  else
    main-is:
      server.hs
    autogen-modules:
      Paths_miso_maze
    other-modules:
      App.Component
      App.Model
      Game.Common
      Game.Game
      Network.Protocol
      Paths_miso_maze
      Server.WsApp
      Server.WsModel
    build-depends: 
      aeson,
      base,
      bytestring,
      containers,
      directory,
      jsaddle,
      miso,
      random,
      stm,
      text,
      vector,
      warp,
      websockets
    ghc-options:
      -Wall -O2 -ddump-splices

test-suite test
  main-is:
    spec.hs
  hs-source-dirs:
    src
  type:
    exitcode-stdio-1.0
  build-depends:
    aeson,
    base,
    containers,
    hspec,
    miso,
    random,
    text,
    vector
  other-modules:
    Game.Common
    Game.CommonSpec
    Game.Game
    Game.GameSpec
  default-language:
    GHC2021
  default-extensions:
    CPP TemplateHaskell
  ghc-options:
    -Wall -O2

